# yapistir_io

./: .editorconfig  .gitignore  CODEOWNERS  LICENSE  README.md  manage.py  pyproject.toml
Paste/: __init__.py  admin.py  apps.py  forms.py  highlight.py  models.py  views.py
Paste/management/commands/: cleaner.py
Paste/migrations/: 0001_initial.py
TPaste/: .env_example  settings.py  urls.py  wsgi.py
static/assets/css/: bulma-social.min.css  bulma.css  code.css  custom.css  embed.css  login.css  user.css
static/assets/js/: bulma-tagsinput.min.js  bulma.js  loadmode.js  meta.js
static/assets/js/addon/mode/: overlay.js
static/assets/js/mode/: apl.js  asciiarmor.js  asn.1.js  asterisk.js  brainfuck.js  clike.js  clojure.js  cmake.js  cobol.js  coffeescript.js  commonlisp.js  crystal.js  css.js  cypher.js  d.js  dart.js  diff.js  django.js  dockerfile.js  dtd.js  dylan.js  ebnf.js  ecl.js  eiffel.js  elm.js  erlang.js  factor.js  fcl.js  forth.js  fortran.js  gas.js  gfm.js  gherkin.js  go.js  groovy.js  haml.js  haskell-literate.js  haskell.js  haxe.js  htmlembedded.js  (+78 more)
templates/: base.html
templates/include/: __detail_func.html  __errors.html  code.html
templates/pages/: index.html  paste_details.html
